# Tracker

./: .gitignore  README.md  pyproject.toml  site_build.py
.github/workflows/: pages.yml  scrape.yml
data/: bills.db
data/manual/: hawaii.json  kauai.json
scripts/: daily_scrape.sh
site/: app.js  bills.json  index.html  styles.css
site/feeds/: all.xml  hawaii.xml  honolulu.xml  kauai.xml  maui.xml  subject-affordable_housing.xml  subject-food_security.xml  subject-tax.xml  subject-transportation.xml
site/feeds/bill/: hawaii-bill-100.xml  hawaii-bill-101.xml  hawaii-bill-102.xml  hawaii-bill-103.xml  hawaii-bill-104.xml  hawaii-bill-105.xml  hawaii-bill-106.xml  hawaii-bill-107.xml  hawaii-bill-108.xml  hawaii-bill-109.xml  hawaii-bill-110.xml  hawaii-bill-111.xml  hawaii-bill-112.xml  hawaii-bill-113.xml  hawaii-bill-114.xml  hawaii-bill-115.xml  hawaii-bill-116.xml  hawaii-bill-117.xml  hawaii-bill-118.xml  hawaii-bill-119.xml  hawaii-bill-120.xml  hawaii-bill-121.xml  hawaii-bill-122.xml  hawaii-bill-123.xml  hawaii-bill-124.xml  hawaii-bill-125.xml  hawaii-bill-126.xml  hawaii-bill-127.xml  hawaii-bill-128.xml  hawaii-bill-129.xml  hawaii-bill-130.xml  hawaii-bill-131.xml  hawaii-bill-132.xml  hawaii-bill-133.xml  (+2323 more)
tests/: test_classify.py  test_db.py  test_feeds.py  test_granicus_parse.py  test_honolulu_adapter.py  test_laserfiche_parse.py  test_legistar_adapter.py
tracker/legislative/: __init__.py  __main__.py  classify.py  cli.py  db.py  diff.py  feeds.py  notify.py  scrape.py
worker/: DEPLOY.md  package.json  wrangler.toml
worker/src/: index.js
(+18 files in other folders)
